<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:weightSum="1">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_gravity="center"
        android:text="@string/customer_s_inventory"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/enter_customer_s_name"
        android:layout_weight="0.09" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">
        <TextView

            android:layout_width="99dp"
            android:layout_height="35dp"
            android:text="@string/meat_item" />

        <Spinner
            android:id="@+id/spspinner1"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:spinnerMode="dropdown" />
    </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">
        <TextView

            android:layout_width="99dp"
            android:layout_height="35dp"
            android:text="@string/fruit_item" />

        <Spinner
            android:id="@+id/spspinner2"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:spinnerMode="dropdown" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/payment_system"
        android:layout_weight="0.10" />

    <RadioGroup
        android:id="@+id/rgBtnpaysys"
        android:layout_width="match_parent"
        android:layout_height="123dp" >

        <RadioButton
            android:id="@+id/rBtndelvr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cash_on_delivery" />

        <RadioButton
            android:id="@+id/rBtnpay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/card_on_payment" />
    </RadioGroup>

    <TextView
        android:id="@+id/tproceed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/proceed"
        android:gravity="center"
        android:layout_gravity="center"
        android:textSize="25dp"
        android:textStyle="bold"
        android:background="@android:color/darker_gray"

    />

</LinearLayout>
